Configured server for socket.io

--- a/public/package.json
+++ b/public/package.json
@@ -11,18 +11,31 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^6.0.0",
+    "@angular/animations": "^6.0.2",
+    "@angular/cdk": "^6.0.2",
     "@angular/common": "^6.0.0",
     "@angular/compiler": "^6.0.0",
     "@angular/core": "^6.0.0",
+    "@angular/flex-layout": "^5.0.0-beta.14",
     "@angular/forms": "^6.0.0",
     "@angular/http": "^6.0.0",
+    "@angular/material": "^6.0.2",
     "@angular/platform-browser": "^6.0.0",
     "@angular/platform-browser-dynamic": "^6.0.0",
-    "@angular/router": "^6.0.0",
+    "@angular/router": "^6.0.2",
     "@reactivex/rxjs": "^6.1.0",
+    "@types/socket.io": "^1.4.33",
+    "@types/socket.io-client": "^1.4.32",
+    "angular5-toaster": "^1.0.2",
+    "body-parser": "^1.18.3",
     "core-js": "^2.5.4",
+    "express": "^4.16.3",
+    "hammerjs": "^2.0.8",
+    "http-status": "^1.1.0",
+    "mongoose": "^5.1.1",
     "rxjs": "^6.1.0",
+    "socket.io": "^2.1.0",
+    "socket.io-client": "^2.1.0",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
