--- a/public/src/tsconfig.app.json
+++ b/public/src/tsconfig.app.json
@@ -3,7 +3,7 @@
   "compilerOptions": {
     "outDir": "../out-tsc/app",
     "module": "es2015",
-    "types": []
+    "types": ["socket.io-client"]
   },
   "exclude": [
     "src/test.ts",
