--- a/server/package.json
+++ b/server/package.json
@@ -9,6 +9,7 @@
     "express": "^4.15.2",
     "express-session": "^1.15.2",
     "handlebars": "^4.0.6",
+    "http-status": "^1.1.0",
     "jsonwebtoken": "^8.2.1",
     "mongoose": "^5.1.1",
     "nodemon": "^1.17.4",
