--- a/public/package.json
+++ b/public/package.json
@@ -34,6 +34,7 @@
     "http-status": "^1.1.0",
     "mongoose": "^5.1.1",
     "rxjs": "^6.1.0",
+    "rxjs-compat": "^6.1.0",
     "socket.io": "^2.1.0",
     "socket.io-client": "^2.1.0",
     "zone.js": "^0.8.26"
