Fixed Dependencies working all

--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "@angular/platform-browser-dynamic": "5.2.4",
     "@angular/router": "5.2.4",
     "@types/socket.io-client": "^1.4.29",
-    "angular2-toaster": "^3.0.1",
+    "ajv": "^6.0.0",
     "body-parser": "^1.17.1",
     "core-js": "2.5.3",
     "express": "^4.15.2",
@@ -43,7 +43,6 @@
   "devDependencies": {
     "@types/jasmine": "2.8.6",
     "@types/node": "^8.9.1",
-    "@types/socket.io-client": "^1.4.29",
     "codelyzer": "4.1.0",
     "jasmine-core": "2.9.1",
     "jasmine-spec-reporter": "4.2.1",
