--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "http-status": "^1.0.1",
     "jsonwebtoken": "^8.2.1",
     "mongoose": "^4.9.7",
+    "mongoose-find-or-create": "^1.3.1",
     "passport": "^0.4.0",
     "passport-oauth": "^1.0.0",
     "rxjs": "5.5.6",
