--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "jsonwebtoken": "^8.2.1",
     "mongoose": "^4.9.7",
     "mongoose-find-or-create": "^1.3.1",
+    "mongoose-findorcreate": "^3.0.0",
     "passport": "^0.4.0",
     "passport-oauth": "^1.0.0",
     "rxjs": "5.5.6",
