--- a/package.json
+++ b/package.json
@@ -30,18 +30,21 @@
     "@types/socket.io-client": "^1.4.29",
     "ajv": "^6.0.0",
     "body-parser": "^1.17.1",
+    "bootstrap": "^4.1.1",
     "core-js": "2.5.3",
     "cors": "^2.8.4",
     "express": "^4.15.2",
     "express-session": "^1.15.6",
     "hammerjs": "^2.0.8",
     "http-status": "^1.0.1",
+    "jquery": "^3.3.1",
     "jsonwebtoken": "^8.2.1",
     "mongoose": "^4.9.7",
     "mongoose-find-or-create": "^1.3.1",
     "mongoose-findorcreate": "^3.0.0",
     "passport": "^0.4.0",
     "passport-oauth": "^1.0.0",
+    "popper.js": "^1.14.3",
     "rxjs": "5.5.6",
     "socket.io": "^1.7.4",
     "socket.io-client": "^1.7.4",
