--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "bootstrap": "^4.1.1",
     "core-js": "2.5.3",
     "cors": "^2.8.4",
+    "dotenv": "^5.0.1",
     "express": "^4.15.2",
     "express-session": "^1.15.6",
     "hammerjs": "^2.0.8",
