--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "mongoose": "^4.9.7",
     "mongoose-find-or-create": "^1.3.1",
     "mongoose-findorcreate": "^3.0.0",
+    "particlesjs": "^2.2.2",
     "passport": "^0.4.0",
     "passport-oauth": "^1.0.0",
     "popper.js": "^1.14.3",
