--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "gistology",
-  "version": "0.5.0",
+  "name": "streamer-dashboard",
+  "version": "1.0.0",
   "license": "MIT",
   "scripts": {
     "ng": "ng",
