--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@angular/router": "5.2.4",
     "@types/socket.io-client": "^1.4.29",
     "ajv": "^6.0.0",
+    "await-to-js": "^2.0.1",
     "body-parser": "^1.17.1",
     "bootstrap": "^4.1.1",
     "core-js": "2.5.3",
@@ -47,6 +48,7 @@
     "passport": "^0.4.0",
     "passport-oauth": "^1.0.0",
     "popper.js": "^1.14.3",
+    "request-promise": "^4.2.2",
     "rxjs": "5.5.6",
     "socket.io": "^1.7.4",
     "socket.io-client": "^1.7.4",
