--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@angular/platform-browser": "5.2.4",
     "@angular/platform-browser-dynamic": "5.2.4",
     "@angular/router": "5.2.4",
+    "@ng-bootstrap/ng-bootstrap": "^2.0.0",
     "@types/socket.io-client": "^1.4.29",
     "ajv": "^6.0.0",
     "await-to-js": "^2.0.1",
