--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@ng-bootstrap/ng-bootstrap": "^2.0.0",
     "@types/socket.io-client": "^1.4.29",
     "ajv": "^6.0.0",
+    "angular-bootstrap-datetimepicker": "^2.2.1",
     "await-to-js": "^2.0.1",
     "body-parser": "^1.17.1",
     "bootstrap": "^4.1.1",
@@ -42,9 +43,11 @@
     "http-status": "^1.0.1",
     "jquery": "^3.3.1",
     "jsonwebtoken": "^8.2.1",
+    "moment": "^2.22.1",
     "mongoose": "^4.9.7",
     "mongoose-find-or-create": "^1.3.1",
     "mongoose-findorcreate": "^3.0.0",
+    "open-iconic": "^1.1.1",
     "particlesjs": "^2.2.2",
     "passport": "^0.4.0",
     "passport-oauth": "^1.0.0",
