--- a/package.json
+++ b/package.json
@@ -13,70 +13,71 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "5.2.4",
-    "@angular/cdk": "^5.2.4",
-    "@angular/cli": "1.6.7",
-    "@angular/common": "5.2.4",
-    "@angular/compiler": "5.2.4",
-    "@angular/compiler-cli": "5.2.4",
-    "@angular/core": "5.2.4",
-    "@angular/flex-layout": "5.0.0-beta.13",
-    "@angular/forms": "5.2.4",
-    "@angular/http": "5.2.4",
-    "@angular/material": "5.2.4",
-    "@angular/platform-browser": "5.2.4",
-    "@angular/platform-browser-dynamic": "5.2.4",
-    "@angular/router": "5.2.4",
-    "@ng-bootstrap/ng-bootstrap": "^2.0.0",
-    "@types/socket.io-client": "^1.4.29",
-    "ajv": "^6.0.0",
+    "@angular/animations": "6.0.1",
+    "@angular/cdk": "6.1.0",
+    "@angular/common": "6.0.1",
+    "@angular/compiler": "6.0.1",
+    "@angular/compiler-cli": "6.0.1",
+    "@angular/core": "6.0.1",
+    "@angular/forms": "6.0.1",
+    "@angular/http": "6.0.1",
+    "@angular/material": "6.1.0",
+    "@angular/platform-browser": "6.0.1",
+    "@angular/platform-browser-dynamic": "6.0.1",
+    "@angular/router": "6.0.1",
+    "@types/socket.io-client": "^1.4.32",
+    "ajv": "^6.5.0",
     "angular-bootstrap-datetimepicker": "^2.2.1",
     "await-to-js": "^2.0.1",
-    "body-parser": "^1.17.1",
+    "body-parser": "^1.18.3",
     "bootstrap": "^4.1.1",
-    "core-js": "2.5.3",
+    "core-js": "2.5.7",
     "cors": "^2.8.4",
     "dotenv": "^5.0.1",
-    "express": "^4.15.2",
+    "express": "^4.16.3",
     "express-session": "^1.15.6",
     "hammerjs": "^2.0.8",
-    "http-status": "^1.0.1",
+    "http-status": "^1.1.2",
     "jquery": "^3.3.1",
     "jsonwebtoken": "^8.2.1",
     "moment": "^2.22.1",
-    "mongoose": "^4.9.7",
+    "mongoose": "^5.1.3",
     "mongoose-find-or-create": "^1.3.1",
     "mongoose-findorcreate": "^3.0.0",
+    "ngx-bootstrap": "^3.0.0",
     "open-iconic": "^1.1.1",
     "particlesjs": "^2.2.2",
     "passport": "^0.4.0",
     "passport-oauth": "^1.0.0",
     "popper.js": "^1.14.3",
     "request-promise": "^4.2.2",
-    "rxjs": "5.5.6",
-    "socket.io": "^1.7.4",
-    "socket.io-client": "^1.7.4",
-    "zone.js": "^0.8.4"
+    "rxjs": "6.2.0",
+    "socket.io": "^2.1.1",
+    "socket.io-client": "^2.1.1",
+    "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@types/jasmine": "2.8.6",
-    "@types/node": "^8.9.1",
-    "codelyzer": "4.1.0",
-    "jasmine-core": "2.9.1",
+    "@angular/cli": "6.0.5",
+    "@types/jasmine": "2.8.7",
+    "@types/node": "10.1.3",
+    "codelyzer": "4.3.0",
+    "jasmine": "3.1.0",
+    "jasmine-core": "3.1.0",
     "jasmine-spec-reporter": "4.2.1",
-    "karma": "2.0.0",
+    "karma": "2.0.2",
     "karma-chrome-launcher": "2.2.0",
     "karma-cli": "1.0.1",
-    "karma-coverage-istanbul-reporter": "1.4.1",
-    "karma-jasmine": "1.1.1",
-    "karma-jasmine-html-reporter": "0.2.2",
+    "karma-coverage-istanbul-reporter": "2.0.1",
+    "karma-jasmine": "1.1.2",
+    "karma-jasmine-html-reporter": "1.1.0",
     "protractor": "5.3.0",
-    "ts-node": "4.1.0",
-    "tslint": "5.9.1",
-    "typescript": "2.6.2"
+    "ts-node": "6.0.5",
+    "tslint": "5.10.0",
+    "typescript": "2.7",
+    "@angular-devkit/build-angular": "~0.6.5"
   },
   "engines": {
-    "node": ">= 8.9.0",
-    "npm": ">= 5.5.1"
+    "node": ">= 8.11.2",
+    "npm": ">= 5.6.0"
   }
 }
