--- a/package.json
+++ b/package.json
@@ -52,7 +52,8 @@
     "passport-oauth": "^1.0.0",
     "popper.js": "^1.14.3",
     "request-promise": "^4.2.2",
-    "rxjs": "6.2.0",
+    "rxjs": "^6.2.0",
+    "rxjs-compat": "^6.2.0",
     "socket.io": "^2.1.1",
     "socket.io-client": "^2.1.1",
     "zone.js": "^0.8.26"
