--- a/public/package.json
+++ b/public/package.json
@@ -25,6 +25,8 @@
     "@types/socket.io-client": "^1.4.32",
     "bootstrap": "^4.1.1",
     "core-js": "^2.5.7",
+    "jasmine": "^3.1.0",
+    "jquery": "^3.3.1",
     "moment": "^2.22.1",
     "ngx-bootstrap": "^3.0.0",
     "open-iconic": "^1.1.1",
@@ -37,6 +39,7 @@
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
+    "@angular-devkit/build-angular": "~0.6.5",
     "@angular/cli": "6.0.5",
     "@angular/compiler-cli": "6.0.1",
     "@angular/language-service": "6.0.1",
@@ -49,7 +52,7 @@
     "karma-chrome-launcher": "2.2.0",
     "karma-coverage-istanbul-reporter": "2.0.1",
     "karma-jasmine": "~1.1.2",
-    "karma-jasmine-html-reporter":"~1.1.0",
+    "karma-jasmine-html-reporter": "~1.1.0",
     "protractor": "^5.3.2",
     "ts-node": "6.0.5",
     "tslint": "5.10.0",
