--- a/public/package.json
+++ b/public/package.json
@@ -33,6 +33,7 @@
     "popper.js": "^1.14.3",
     "rxjs": "^6.2.0",
     "rxjs-compat": "^6.2.0",
+    "tether": "^1.4.4",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
