--- a/public/package.json
+++ b/public/package.json
@@ -37,14 +37,15 @@
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
+    "@angular/compiler-cli": "^6.0.3",
     "@angular-devkit/build-angular": "~0.7.0-beta.1",
     "@angular/cli": "6.0.7",
-    "@angular/compiler-cli": "6.0.3",
     "@angular/language-service": "6.0.3",
     "@types/jasmine": "2.8.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "10.3.0",
     "codelyzer": "4.3.0",
+    "jasmine-core": "^3.1.0",
     "jasmine-spec-reporter": "4.2.1",
     "karma": "^2.0.2",
     "karma-chrome-launcher": "2.2.0",
