--- a/public/package.json
+++ b/public/package.json
@@ -13,18 +13,20 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "6.0.3",
-    "@angular/cdk": "6.2.0",
+    "@angular/cdk": "^6.2.0",
     "@angular/common": "6.0.3",
     "@angular/compiler": "6.0.3",
     "@angular/core": "6.0.3",
     "@angular/forms": "6.0.3",
     "@angular/http": "6.0.3",
+    "@angular/material": "^6.2.0",
     "@angular/platform-browser": "6.0.3",
     "@angular/platform-browser-dynamic": "6.0.3",
     "@angular/router": "6.0.3",
     "@ng-bootstrap/ng-bootstrap": "^2.0.0",
     "bootstrap": "^4.1.1",
     "core-js": "^2.5.7",
+    "hammerjs": "^2.0.8",
     "jasmine": "^3.1.0",
     "jquery": "^3.3.1",
     "moment": "^2.22.2",
