--- a/public/package.json
+++ b/public/package.json
@@ -25,6 +25,7 @@
     "@angular/router": "6.0.3",
     "@ng-bootstrap/ng-bootstrap": "^2.0.0",
     "bootstrap": "^4.1.1",
+    "bootswatch": "^4.1.1",
     "core-js": "^2.5.7",
     "hammerjs": "^2.0.8",
     "jasmine": "^3.1.0",
