--- a/server/package.json
+++ b/server/package.json
@@ -15,26 +15,33 @@
     "type": "git",
     "url": "https://github.com/Nizars/streamer-dashboard"
   },
-  "main": "index.js",
+  "main": "./dist/index.js",
   "scripts": {
-    "start": "node ./dist/app.js",
+    "start": "node -r dotenv/config ./dist/index.js",
     "watch": "concurrently -k -p \"[{name}]\" -n \"TypeScript,Node\" -c \"yellow.bold,cyan.bold,green.bold\" \"npm run watch-ts\" \"npm run serve\"",
-    "serve": "nodemon ./dist/app.js",
+    "serve": "nodemon -r dotenv/config ./dist/index.js",
+    "server": "tsc && nodemon -r dotenv/config ./dist/index.js",
     "start_local": "npm run build && npm run watch",
     "watch-ts": "tsc -w",
     "build-ts": "tsc",
     "build": "npm run build-ts && npm run tslint",
-    "serve-debug": "nodemon --inspect ./dist/app.js",
+    "serve-debug": "nodemon --inspect -r dotenv/config ./dist/index.js",
     "tslint": "tslint -c tslint.json -p tsconfig.json",
     "test": "jest --forceExit",
     "docs": "tsoa swagger"
   },
   "dependencies": {
+    "@types/compression": "0.0.36",
+    "@types/debug": "0.0.30",
     "@types/express": "~4.16.0",
+    "@types/helmet": "0.0.38",
     "@types/socket.io": "~1.4.34",
     "ajv": "^6.5.0",
+    "app-root-path": "^2.0.1",
     "await-to-js": "^2.0.1",
     "body-parser": "^1.18.3",
+    "compression": "1.7.2",
+    "cookie-parser": "1.4.3",
     "core-js": "2.5.7",
     "cors": "^2.8.4",
     "dotenv": "^6.0.0",
@@ -42,9 +49,11 @@
     "express-session": "^1.15.6",
     "hammerjs": "^2.0.8",
     "handlebars": "^4.0.11",
+    "helmet": "3.12.1",
     "hoek": "^5.0.3",
     "http-status": "^1.1.2",
     "jsonwebtoken": "^8.2.2",
+    "lodash": "4.17.10",
     "moment": "^2.22.2",
     "mongoose": "^5.1.4",
     "morgan": "^1.9.0",
@@ -55,30 +64,32 @@
     "socket.io": "~2.1.1",
     "ts-node": "^6.1.0",
     "uuid": "^3.2.1",
-    "app-root-path": "^2.0.1",
     "winston": "^2.4.2"
   },
   "devDependencies": {
     "@types/body-parser": "^1.17.0",
+    "@types/cookie-parser": "1.4.1",
+    "@types/cors": "2.8.4",
     "@types/dotenv": "^4.0.3",
     "@types/express": "^4.16.0",
     "@types/jest": "^23.0.0",
     "@types/mongodb": "^3.0.19",
     "@types/mongoose": "^5.0.15",
     "@types/morgan": "^1.7.35",
+    "@types/node": "10.3.1",
     "@types/socket.io": "^1.4.34",
     "@types/supertest": "^2.0.4",
     "@types/uuid": "^3.4.3",
     "concurrently": "^3.5.1",
+    "gulp": "^3.9.1",
+    "gulp-typescript": "^4.0.2",
     "jest": "^23.1.0",
     "nodemon": "^1.17.5",
     "supertest": "^3.1.0",
     "ts-jest": "^22.4.6",
     "tslint": "^5.10.0",
-    "typescript": "^2.9.1",
     "tsoa": "^2.1.5",
-    "gulp": "^3.9.1",
-    "gulp-typescript": "^4.0.2"
+    "typescript": "^2.9.1"
   },
   "jest": {
     "globals": {
