--- a/server/package.json
+++ b/server/package.json
@@ -34,7 +34,13 @@
     "@types/compression": "0.0.36",
     "@types/debug": "0.0.30",
     "@types/express": "~4.16.0",
+    "@types/express-session": "^1.15.10",
+    "@types/handlebars": "^4.0.37",
     "@types/helmet": "0.0.38",
+    "@types/jsonwebtoken": "^7.2.7",
+    "@types/passport": "^0.4.5",
+    "@types/passport-oauth2": "^1.4.5",
+    "@types/request": "^2.47.0",
     "@types/socket.io": "~1.4.34",
     "ajv": "^6.5.0",
     "app-root-path": "^2.0.1",
@@ -58,7 +64,7 @@
     "mongoose": "^5.1.4",
     "morgan": "^1.9.0",
     "passport": "^0.4.0",
-    "passport-oauth": "^1.0.0",
+    "passport-oauth2": "^1.4.0",
     "request": "^2.87.0",
     "request-promise": "^4.2.2",
     "socket.io": "~2.1.1",
