--- a/client/angular.json
+++ b/client/angular.json
@@ -46,10 +46,13 @@
               "src/favicon.ico"
             ],
             "styles": [
-              "./node_modules/bootstrap/scss/bootstrap.scss",
-              "src/styles.scss"
+              "./node_modules/perfect-scrollbar/css/perfect-scrollbar.css",
+              "./node_modules/ngx-toastr/toastr.css",
+              "./src/assets/scss/bootstrap-material-design.scss",
+              "./src/styles.scss"
             ],
             "scripts": [
+              "./node_modules/chart.js/dist/Chart.min.js",
               "./node_modules/jquery/dist/jquery.min.js",
               "./node_modules/tether/dist/js/tether.min.js",
               "./node_modules/popper.js/dist/umd/popper.min.js",
