--- a/client/package.json
+++ b/client/package.json
@@ -12,44 +12,61 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations"              : "6.0.3",
-    "@angular/cdk"                     : "^6.2.1",
-    "@angular/common"                  : "6.0.3",
-    "@angular/compiler"                : "6.0.3",
-    "@angular/core"                    : "6.0.3",
-    "@angular/forms"                   : "6.0.3",
-    "@angular/http"                    : "6.0.3",
-    "@angular/material"                : "^6.2.1",
-    "@angular/platform-browser"        : "6.0.3",
-    "@angular/platform-browser-dynamic": "6.0.3",
-    "@angular/router"                  : "6.0.3",
-    "@ng-bootstrap/ng-bootstrap"       : "^2.0.0",
-    "bootstrap"                        : "^4.1.1",
-    "bootswatch"                       : "^4.1.1",
-    "core-js"                          : "^2.5.7",
-    "express"                          : "~4.16.3",
-    "hammerjs"                         : "^2.0.8",
-    "jasmine"                          : "^3.1.0",
-    "jquery"                           : "^3.3.1",
-    "moment"                           : "^2.22.2",
-    "ngx-bootstrap"                    : "^3.0.0",
-    "open-iconic"                      : "^1.1.1",
-    "particlesjs"                      : "^2.2.2",
-    "popper.js"                        : "^1.14.3",
-    "rxjs"                             : "^6.2.0",
-    "rxjs-compat"                      : "^6.2.0",
-    "socket.io"                        : "~2.1.1",
-    "tether"                           : "^1.4.4",
-    "zone.js"                          : "^0.8.26"
+    "@angular/animations": "6.0.4",
+    "@angular/cdk": "^6.2.1",
+    "@angular/common": "6.0.4",
+    "@angular/compiler": "6.0.4",
+    "@angular/core": "6.0.4",
+    "@angular/forms": "^6.0.4",
+    "@angular/http": "6.0.4",
+    "@angular/platform-browser": "6.0.4",
+    "@angular/platform-browser-dynamic": "6.0.4",
+    "@angular/platform-server": "6.0.4",
+    "@angular/router": "6.0.4",
+    "@ng-bootstrap/ng-bootstrap": "2.1.0",
+    "ajv": "6.5.1",
+    "ajv-keywords": "3.2.0",
+    "autoprefixer": "^8.6.2",
+    "bootstrap": "4.1.1",
+    "bootstrap-material-design": "^4.1.1",
+    "chart.js": "2.7.2",
+    "chartist": "0.11.0",
+    "classlist.js": "1.1.20150312",
+    "copy-webpack-plugin": "4.3.0",
+    "core-js": "^2.5.7",
+    "express": "~4.16.3",
+    "font-awesome": "4.7.0",
+    "hammerjs": "^2.0.8",
+    "jasmine": "^3.1.0",
+    "jquery": "^3.3.1",
+    "jw-bootstrap-switch-ng2": "1.0.10",
+    "ng2-charts": "1.6.0",
+    "ngx-toastr": "^8.8.0",
+    "nouislider": "11.1.0",
+    "moment": "^2.22.2",
+    "open-iconic": "^1.1.1",
+    "particlesjs": "^2.2.2",
+    "perfect-scrollbar": "1.4.0",
+    "popper.js": "^1.14.3",
+    "rellax": "1.6.2",
+    "rxjs": "^6.2.0",
+    "rxjs-compat": "^6.2.0",
+    "socket.io": "~2.1.1",
+    "tether": "^1.4.4",
+    "web-animations-js": "2.3.1",
+    "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular/compiler-cli": "^6.0.3",
-    "@angular-devkit/build-angular": "~0.7.0-beta.1",
-    "@angular/cli": "6.0.7",
-    "@angular/language-service": "6.0.3",
+    "@angular/cli": "6.0.8",
+    "@angular/compiler-cli": "^6.0.4",
+    "@angular-devkit/build-angular": "~0.6.8",
+    "@angular/language-service": "6.0.4",
+    "@types/bootstrap": "4.1.0",
+    "@types/chartist": "0.9.41",
     "@types/jasmine": "2.8.8",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "10.3.1",
+    "@types/jquery": "3.3.2",
+    "@types/node": "10.3.2",
     "@types/express": "^4.16.0",
     "@types/socket.io-client": "~1.4.32",
     "codelyzer": "4.3.0",
