--- a/client/angular.json
+++ b/client/angular.json
@@ -56,7 +56,8 @@
               "./node_modules/jquery/dist/jquery.min.js",
               "./node_modules/tether/dist/js/tether.min.js",
               "./node_modules/popper.js/dist/umd/popper.min.js",
-              "./node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"
+              "./node_modules/bootstrap/dist/js/bootstrap.bundle.min.js",
+              "./src/assets/materialize-css/dist/js/materialize.min.js"
             ]
           },
           "configurations": {
