--- a/client/package.json
+++ b/client/package.json
@@ -12,27 +12,29 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "6.0.4",
+    "@angular/animations": "6.0.5",
     "@angular/cdk": "^6.2.1",
-    "@angular/common": "6.0.4",
-    "@angular/compiler": "6.0.4",
-    "@angular/core": "6.0.4",
-    "@angular/forms": "^6.0.4",
-    "@angular/http": "6.0.4",
-    "@angular/platform-browser": "6.0.4",
-    "@angular/platform-browser-dynamic": "6.0.4",
-    "@angular/platform-server": "6.0.4",
-    "@angular/router": "6.0.4",
+    "@angular/common": "6.0.5",
+    "@angular/compiler": "6.0.5",
+    "@angular/core": "6.0.5",
+    "@angular/forms": "^6.0.5",
+    "@angular/http": "6.0.5",
+    "@angular/platform-browser": "6.0.5",
+    "@angular/platform-browser-dynamic": "6.0.5",
+    "@angular/platform-server": "6.0.5",
+    "@angular/router": "6.0.5",
+    "@mdi/font": "^2.4.85",
     "@ng-bootstrap/ng-bootstrap": "2.1.0",
     "ajv": "6.5.1",
     "ajv-keywords": "3.2.0",
+    "angular2-materialize": "^15.1.10",
     "autoprefixer": "^8.6.2",
     "bootstrap": "4.1.1",
     "bootstrap-material-design": "^4.1.1",
     "chart.js": "2.7.2",
     "chartist": "0.11.0",
     "classlist.js": "1.1.20150312",
-    "copy-webpack-plugin": "4.3.0",
+    "copy-webpack-plugin": "4.5.1",
     "core-js": "^2.5.7",
     "express": "~4.16.3",
     "font-awesome": "4.7.0",
@@ -40,9 +42,10 @@
     "jasmine": "^3.1.0",
     "jquery": "^3.3.1",
     "jw-bootstrap-switch-ng2": "1.0.10",
-    "materialize-css": "^1.0.0-rc.1",
+    "materialize-css": "^0.100.2",
     "moment": "^2.22.2",
     "ng2-charts": "1.6.0",
+    "ngx-materialize": "^6.0.1",
     "ngx-toastr": "^8.8.0",
     "nouislider": "11.1.0",
     "open-iconic": "^1.1.1",
@@ -50,27 +53,30 @@
     "perfect-scrollbar": "1.4.0",
     "popper.js": "^1.14.3",
     "rellax": "1.6.2",
-    "rxjs": "^6.2.0",
-    "rxjs-compat": "^6.2.0",
+    "roboto-fontface": "^0.9.0",
+    "rxjs": "^6.2.1",
+    "rxjs-compat": "^6.2.1",
     "socket.io": "~2.1.1",
     "tether": "^1.4.4",
+    "url-loader": "^1.0.1",
     "web-animations-js": "2.3.1",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular/cli": "6.0.8",
-    "@angular/compiler-cli": "^6.0.4",
     "@angular-devkit/build-angular": "~0.6.8",
-    "@angular/language-service": "6.0.4",
+    "@angular/cli": "6.0.8",
+    "@angular/compiler-cli": "^6.0.5",
+    "@angular/language-service": "6.0.5",
     "@types/bootstrap": "4.1.0",
     "@types/chartist": "0.9.41",
+    "@types/express": "^4.16.0",
     "@types/jasmine": "2.8.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/jquery": "3.3.2",
-    "@types/node": "10.3.2",
-    "@types/express": "^4.16.0",
+    "@types/node": "10.3.3",
     "@types/socket.io-client": "~1.4.32",
     "codelyzer": "4.3.0",
+    "file-loader": "^1.1.11",
     "jasmine-core": "^3.1.0",
     "jasmine-spec-reporter": "4.2.1",
     "karma": "^2.0.2",
@@ -80,9 +86,9 @@
     "karma-jasmine": "~1.1.2",
     "karma-jasmine-html-reporter": "~1.1.0",
     "protractor": "^5.3.2",
-    "ts-node": "6.1.0",
+    "ts-node": "6.1.1",
     "tslint": "5.10.0",
-    "typescript": "2.9.1"
+    "typescript": "2.9.2"
   },
   "engines": {
     "node": ">= 8.11.2",
