--- a/server/package.json
+++ b/server/package.json
@@ -17,15 +17,32 @@
   },
   "main": "./dist/index.js",
   "scripts": {
-    "start": "node -r dotenv/config ./dist/index.js",
+    "start": "node -r dotenv/config ./dist/index.js dotenv_config_path=./src/environments/dev/.env",
+    "start_dev": "npm run build && npm run watch_dev",
+    "start_prod": "npm run build && npm run watch_prod",
+
     "watch": "concurrently -k -p \"[{name}]\" -n \"TypeScript,Node\" -c \"yellow.bold,cyan.bold,green.bold\" \"npm run watch-ts\" \"npm run serve\"",
-    "serve": "nodemon -r dotenv/config ./dist/index.js",
-    "server": "tsc && nodemon -r dotenv/config ./dist/index.js",
-    "start_local": "npm run build && npm run watch",
+    "watch_dev": "concurrently -k -p \"[{name}]\" -n \"TypeScript,Node\" -c \"yellow.bold,cyan.bold,green.bold\" \"npm run watch-ts\" \"npm run serve_dev\"",
+    "watch_prod": "concurrently -k -p \"[{name}]\" -n \"TypeScript,Node\" -c \"yellow.bold,cyan.bold,green.bold\" \"npm run watch-ts\" \"npm run serve_prod\"",
+
+    "serve": "nodemon -r dotenv/config ./dist/index.js dotenv_config_path=./src/environments/dev/.env",
+    "serve_dev": "nodemon -r dotenv/config ./dist/index.js dotenv_config_path=./src/environments/dev/.env",
+    "serve_prod": "nodemon -r dotenv/config ./dist/index.js dotenv_config_path=./src/environments/prod/.env",
+
+    "server": "tsc && nodemon -r ./dist/index.js",
+    "server_dev": "tsc && nodemon -r dotenv/config ./dist/index.js dotenv_config_path=./src/environments/dev/.env",
+    "server_prod": "tsc && nodemon -r dotenv/config ./dist/index.js dotenv_config_path=./src/environments/prod/.env",
+
     "watch-ts": "tsc -w",
     "build-ts": "tsc",
+
+
     "build": "npm run build-ts && npm run tslint",
-    "serve-debug": "nodemon --inspect -r dotenv/config ./dist/index.js",
+    "build_dev": "npm run build-ts && npm run tslint",
+    "build_local": "npm run build-ts && npm run tslint",
+    "build_prod": "npm run build-ts && npm run tslint",
+
+    "serve-debug": "nodemon --inspect -r dotenv/config ./dist/index.js dotenv_config_path=./src/environments/dev/.env",
     "tslint": "tslint -c tslint.json -p tsconfig.json",
     "test": "jest --forceExit",
     "docs": "tsoa swagger"
